--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <center>
+         <h1>Hello, World!</h1>
   <p>This is my first webpage hosted on GitHub pages.</p>
+        <marquee><OneDot</marquee>
+    </center>
 </body>
 </html>
